--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "shortid": "^2.2.16",
+    "three-dots": "^0.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
